ios/openim_sdk_ffi.xcframework/ios-arm64/openim_sdk_ffi.framework/openim_sdk_ffi.h

extern void ChangeGroupMemberMute(char* operationID, char* groupID, char* userID, int mutedSeconds);
extern void ChangeGroupMute(char* operationID, char* groupID, _Bool isMute);
extern void TransferGroupOwner(char* operationID, char* groupID, char* newOwnerUserID);
extern void DismissGroup(char* operationID, char* groupID);
extern void GetUsersInGroup(char* operationID, char* groupID, char* userIDList);
extern void IsJoinGroup(char* operationID, char* groupID);
extern void QuitGroup(char* operationID, char* groupID);
extern void UploadLogs(char* operationID, int line, char* ex, char* uuid);
extern void Logs(char* operationID, int logLevel, char* file, int line, char* msgs, char* err, char* keyAndValue);
extern char* GetSdkVersion(void);
extern _Bool InitSDK(Openim_Listener imListener, Dart_Port_DL port, char* operationID, char* config);
extern void Login(char* operationID, char* userID, char* token);
extern void Logout(char* operationID);
extern void SetAppBackgroundStatus(char* operationID, _Bool isBackground);
extern void NetworkStatusChanged(char* operationID);
extern int GetLoginStatus(char* operationID);
extern char* GetLoginUserID(void);
extern void UpdateFcmToken(char* operationID, char* fcmToken, int64_t expireTime);
extern void SetAppBadge(char* operationID, int32_t appUnreadCount);
extern void GetUsersInfo(char* operationID, char* userIDList);
extern void GetUsersInfoFromSrv(char* operationID, char* userIDList);
extern void SetSelfInfo(char* operationID, char* userInfo);
extern void GetSelfUserInfo(char* operationID);
extern void SubscribeUsersStatus(char* operationID, char* userIDs);