src/flutter_openim_sdk_ffi.h

typedef struct
{
    void (*onMethodChannel)(Dart_Port_DL port, char *);
} Openim_Listener;