lib/openim_ffi_bindings_generated.dart


  void ChangeGroupMemberMute(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> userID,
    int mutedSeconds,
  ) {
    return _ChangeGroupMemberMute(operationID, groupID, userID, mutedSeconds);
  }

  late final _ChangeGroupMemberMutePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int,
      )
    >
  >('ChangeGroupMemberMute');
  late final _ChangeGroupMemberMute =
      _ChangeGroupMemberMutePtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  void ChangeGroupMute(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    bool isMute,
  ) {
    return _ChangeGroupMute(operationID, groupID, isMute);
  }

  late final _ChangeGroupMutePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Bool)
    >
  >('ChangeGroupMute');
  late final _ChangeGroupMute =
      _ChangeGroupMutePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool)
      >();

  void TransferGroupOwner(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> newOwnerUserID,
  ) {
    return _TransferGroupOwner(operationID, groupID, newOwnerUserID);
  }

  late final _TransferGroupOwnerPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('TransferGroupOwner');
  late final _TransferGroupOwner =
      _TransferGroupOwnerPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void DismissGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _DismissGroup(operationID, groupID);
  }

  late final _DismissGroupPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('DismissGroup');
  late final _DismissGroup =
      _DismissGroupPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetUsersInGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _GetUsersInGroup(operationID, groupID, userIDList);
  }

  late final _GetUsersInGroupPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('GetUsersInGroup');
  late final _GetUsersInGroup =
      _GetUsersInGroupPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void IsJoinGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _IsJoinGroup(operationID, groupID);
  }

  late final _IsJoinGroupPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('IsJoinGroup');
  late final _IsJoinGroup =
      _IsJoinGroupPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void QuitGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _QuitGroup(operationID, groupID);
  }

  late final _QuitGroupPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('QuitGroup');
  late final _QuitGroup =
      _QuitGroupPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void UploadLogs(
    ffi.Pointer<ffi.Char> operationID,
    int line,
    ffi.Pointer<ffi.Char> ex,
    ffi.Pointer<ffi.Char> uuid,
  ) {
    return _UploadLogs(operationID, line, ex, uuid);
  }

  late final _UploadLogsPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('UploadLogs');
  late final _UploadLogs =
      _UploadLogsPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void Logs(
    ffi.Pointer<ffi.Char> operationID,
    int logLevel,
    ffi.Pointer<ffi.Char> file,
    int line,
    ffi.Pointer<ffi.Char> msgs,
    ffi.Pointer<ffi.Char> err,
    ffi.Pointer<ffi.Char> keyAndValue,
  ) {
    return _Logs(operationID, logLevel, file, line, msgs, err, keyAndValue);
  }

  late final _LogsPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('Logs');
  late final _Logs =
      _LogsPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> GetSdkVersion() {
    return _GetSdkVersion();
  }

  late final _GetSdkVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'GetSdkVersion',
      );
  late final _GetSdkVersion =
      _GetSdkVersionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  bool InitSDK(
    Openim_Listener imListener,
    int port,
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> config,
  ) {
    return _InitSDK(imListener, port, operationID, config);
  }

  late final _InitSDKPtr = _lookup<
    ffi.NativeFunction<
      ffi.Bool Function(
        Openim_Listener,
        Dart_Port_DL,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('InitSDK');
  late final _InitSDK =
      _InitSDKPtr.asFunction<
        bool Function(
          Openim_Listener,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void Login(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userID,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _Login(operationID, userID, token);
  }

  late final _LoginPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('Login');
  late final _Login =
      _LoginPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void Logout(ffi.Pointer<ffi.Char> operationID) {
    return _Logout(operationID);
  }

  late final _LogoutPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'Logout',
      );
  late final _Logout =
      _LogoutPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void SetAppBackgroundStatus(
    ffi.Pointer<ffi.Char> operationID,
    bool isBackground,
  ) {
    return _SetAppBackgroundStatus(operationID, isBackground);
  }

  late final _SetAppBackgroundStatusPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Bool)>
  >('SetAppBackgroundStatus');
  late final _SetAppBackgroundStatus =
      _SetAppBackgroundStatusPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, bool)
      >();

  void NetworkStatusChanged(ffi.Pointer<ffi.Char> operationID) {
    return _NetworkStatusChanged(operationID);
  }

  late final _NetworkStatusChangedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'NetworkStatusChanged',
      );
  late final _NetworkStatusChanged =
      _NetworkStatusChangedPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>)
      >();

  int GetLoginStatus(ffi.Pointer<ffi.Char> operationID) {
    return _GetLoginStatus(operationID);
  }

  late final _GetLoginStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'GetLoginStatus',
      );
  late final _GetLoginStatus =
      _GetLoginStatusPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> GetLoginUserID() {
    return _GetLoginUserID();
  }

  late final _GetLoginUserIDPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'GetLoginUserID',
      );
  late final _GetLoginUserID =
      _GetLoginUserIDPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  void UpdateFcmToken(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> fcmToken,
    int expireTime,
  ) {
    return _UpdateFcmToken(operationID, fcmToken, expireTime);
  }

  late final _UpdateFcmTokenPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int64)
    >
  >('UpdateFcmToken');
  late final _UpdateFcmToken =
      _UpdateFcmTokenPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void SetAppBadge(ffi.Pointer<ffi.Char> operationID, int appUnreadCount) {
    return _SetAppBadge(operationID, appUnreadCount);
  }

  late final _SetAppBadgePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int32)>
  >('SetAppBadge');
  late final _SetAppBadge =
      _SetAppBadgePtr.asFunction<void Function(ffi.Pointer<ffi.Char>, int)>();

  void GetUsersInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _GetUsersInfo(operationID, userIDList);
  }

  late final _GetUsersInfoPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('GetUsersInfo');
  late final _GetUsersInfo =
      _GetUsersInfoPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetUsersInfoFromSrv(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _GetUsersInfoFromSrv(operationID, userIDList);
  }

  late final _GetUsersInfoFromSrvPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('GetUsersInfoFromSrv');
  late final _GetUsersInfoFromSrv =
      _GetUsersInfoFromSrvPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void SetSelfInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userInfo,
  ) {
    return _SetSelfInfo(operationID, userInfo);
  }

  late final _SetSelfInfoPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('SetSelfInfo');
  late final _SetSelfInfo =
      _SetSelfInfoPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetSelfUserInfo(ffi.Pointer<ffi.Char> operationID) {
    return _GetSelfUserInfo(operationID);
  }

  late final _GetSelfUserInfoPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'GetSelfUserInfo',
      );
  late final _GetSelfUserInfo =
      _GetSelfUserInfoPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void SubscribeUsersStatus(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDs,
  ) {
    return _SubscribeUsersStatus(operationID, userIDs);
  }
